Provide more carrier threads to tests that need it.