@@ -61,6 +61,7 @@
  *
  * @library /vmTestbase
  *          /test/lib
+ * @enablePreview
  * @build nsk.jdi.Event.request.request001
  *        nsk.jdi.Event.request.request001a
  * @run main/othervm
@@ -70,6 +71,6 @@
  *      -waittime=5
  *      -debugee.vmkind=java
  *      -transport.address=dynamic
- *      -debugee.vmkeys="${test.vm.opts} ${test.java.opts}"
+ *      -debugee.vmkeys="${test.vm.opts} ${test.java.opts} --add-opens=java.base/java.lang=ALL-UNNAMED"
  */
 
