@@ -46,6 +46,7 @@
  *
  * @library /vmTestbase
  *          /test/lib
+ * @enablePreview
  * @build nsk.jdi.EventRequestManager.stepRequests.stepreq001
  *        nsk.jdi.EventRequestManager.stepRequests.stepreq001t
  * @run main/othervm
@@ -55,6 +56,6 @@
  *      -waittime=5
  *      -debugee.vmkind=java
  *      -transport.address=dynamic
- *      -debugee.vmkeys="${test.vm.opts} ${test.java.opts}"
+ *      -debugee.vmkeys="${test.vm.opts} ${test.java.opts} --add-opens=java.base/java.lang=ALL-UNNAMED"
  */
 
