@@ -60,6 +60,7 @@
  *
  * @library /vmTestbase
  *          /test/lib
+ * @enablePreview
  * @build nsk.jdi.LocatableEvent.thread.thread001
  *        nsk.jdi.LocatableEvent.thread.thread001a
  * @run main/othervm
@@ -69,6 +70,6 @@
  *      -waittime=5
  *      -debugee.vmkind=java
  *      -transport.address=dynamic
- *      -debugee.vmkeys="${test.vm.opts} ${test.java.opts}"
+ *      -debugee.vmkeys="${test.vm.opts} ${test.java.opts} --add-opens=java.base/java.lang=ALL-UNNAMED"
  */
 
